force-app/main/default/objects/Contact/fields/Auto_Notification_Opt_Out__c.field-meta.xml
<CustomField>
    <fullName>Auto_Notification_Opt_Out__c</fullName>
    <defaultValue>false</defaultValue>
    <description>#Case_Mgt_v1: Auto notification emails opt out option provided to all Contacts
RQ-004381 : Contact page layout optimisation</description>
    <inlineHelpText>This opt-out applies to the Case acknowledgement email sent upon case creation. Please tick this box if the customer does not wish to receive a case creation acknowledgement email.</inlineHelpText>
    <label>Case Mgt Auto-Notification Opt Out</label>
    <type>Checkbox</type>
</CustomField>