force-app/main/default/objects/Contact/fields/Brand_for_Integration__c.field-meta.xml
<CustomField>
    <fullName>Brand_for_Integration__c</fullName>
    <description>+++ INTEGRATION: MASTER DATA +++
Do not change this field without reviewing impact with master data integration and reviewing with SFDC architects.</description>
    <label>Brand for Integration</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hamburg Sud</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>