force-app/main/default/objects/Contact/fields/Cluster_as_Logged_in_User_Cluster__c.field-meta.xml
<CustomField>
    <fullName>Cluster_as_Logged_in_User_Cluster__c</fullName>
    <formula>if( Cluster_Name__c  ==  TEXT($User.Cluster__c),1,0)</formula>
    <label>Cluster as Logged in User Cluster</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>