force-app/main/default/objects/Contact/fields/Cluster_Name__c.field-meta.xml
<CustomField>
    <fullName>Cluster_Name__c</fullName>
    <formula>Account.Cluster_Name__r.Name</formula>
    <label>Cluster Name</label>
    <type>Text</type>
</CustomField>