force-app/main/default/objects/Contact/fields/CMD_Contact_Code__c.field-meta.xml
<CustomField>
    <fullName>CMD_Contact_Code__c</fullName>
    <label>CMD_Contact_Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>