force-app/main/default/objects/Contact/fields/Contact_Details_Ageing__c.field-meta.xml
<CustomField>
    <fullName>Contact_Details_Ageing__c</fullName>
    <description>#RQ-002172</description>
    <formula>TODAY() - Last_Checked__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Calculates the number of days since the contact details (Phone, Email, preferences, etc.) were last checked by an agent.</inlineHelpText>
    <label>Contact Details Ageing</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>