force-app/main/default/objects/Contact/fields/Contact_Status__c.field-meta.xml
<CustomField>
    <fullName>Contact_Status__c</fullName>
    <description>&quot;+++ INTEGRATION: MASTER DATA +++ 
Do not change this field without reviewing impact with master data integration&quot; 
#RQ-004465- Sync&apos;ed with CMD, shows if a contact is active or not. Inactive means they are no longer employed by the account the contact record is linked to.
#RQ-004927</description>
    <inlineHelpText>Set to inactive when the contact is no longer employed by the company/account this contact is linked to. Never delete the contact in this scenario</inlineHelpText>
    <label>Contact Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
                <default>true</default>
                <label>Active</label>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>