force-app/main/default/objects/Contact/fields/CSAT_Opt_Out__c.field-meta.xml
<CustomField>
    <fullName>CSAT_Opt_Out__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SC-1256 #Case_Mgt_v1: CSAT Closure opt-out option for customers</description>
    <inlineHelpText>This opt out applies to the Case Closure Email notification with CSAT sent to the customer upon case closure. Please tick this box if the customer does not wish to receive a Case Closure notification email</inlineHelpText>
    <label>CSAT Opt Out</label>
    <type>Checkbox</type>
</CustomField>