force-app/main/default/objects/Contact/fields/Customer_Code__c.field-meta.xml
<CustomField>
    <fullName>Customer_Code__c</fullName>
    <description>Backend field created to store the customer code for the contacts failed to insert because account not existed. This value will be cleared once contact tagged to account.</description>
    <label>Customer Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>