force-app/main/default/objects/Contact/fields/Decision_Maker__c.field-meta.xml
<CustomField>
    <fullName>Decision_Maker__c</fullName>
    <description>#RQ-004426 - Select the respective liner brand(s) that this contact represents as a decision maker. If your contact is decision maker for multiple brands then please select multiple values.</description>
    <inlineHelpText>Select the respective liner brand(s) that this contact represents as a decision maker. If your contact is decision maker for multiple brands then please select multiple values.</inlineHelpText>
    <label>Decision Maker</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Maersk Line</fullName>
            </value>
            <value>
                <fullName>MCC</fullName>
            </value>
            <value>
                <fullName>Seago</fullName>
            </value>
            <value>
                <fullName>Sealand</fullName>
            </value>
            <value>
                <fullName>Hamburg Sud</fullName>
            </value>
            <value>
                <fullName>Safmarine</fullName>
                <isActive>false</isActive>
                <label>Safmarine</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>