force-app/main/default/objects/Contact/fields/Deduped_Contact__c.field-meta.xml
<CustomField>
    <fullName>Deduped_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <description>#RQ-002893: This will be true for all deduped contacts.
Note: This field will be automatically populated by informatica once deduplication is completed for that contact.</description>
    <label>Deduped Contact</label>
    <type>Checkbox</type>
</CustomField>