force-app/main/default/objects/Contact/fields/Deduped_Date__c.field-meta.xml
<CustomField>
    <fullName>Deduped_Date__c</fullName>
    <description>#RQ-002893: Date Time when contact was deduped.
Note: This field will be automatically populated by informatica once deduplication completed for that contact.</description>
    <label>Deduped Date</label>
    <type>DateTime</type>
</CustomField>