force-app/main/default/objects/Contact/fields/Duplicate_Email__c.field-meta.xml
<CustomField>
    <fullName>Duplicate_Email__c</fullName>
    <description>+++ INTEGRATION: MASTER DATA +++ 
Do not change this field without reviewing impact with master data integration 
#RQ-000777 - Case Management Phase 1 - This field is used to store duplicate email information.
#RQ-004927- Updated help text.</description>
    <inlineHelpText>Use this field to store a alternative email address.</inlineHelpText>
    <label>Other Email</label>
    <type>Email</type>
</CustomField>