force-app/main/default/objects/Contact/fields/Email_Phone_Verification_Results__c.field-meta.xml
<CustomField>
    <fullName>Email_Phone_Verification_Results__c</fullName>
    <label>Email-Phone Verification Results</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>