force-app/main/default/objects/Contact/fields/Email_Verified__c.field-meta.xml
<CustomField>
    <fullName>Email_Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SFMC-7701-Indicates whether the email verification process has been completed i.e. an email containing a code or verification link has been sent to the address for confirmation</description>
    <inlineHelpText>Indicates whether the email verification process has been completed i.e. an email containing a code or verification link has been sent to the address for confirmation</inlineHelpText>
    <label>Email Verified</label>
    <type>Checkbox</type>
</CustomField>