force-app/main/default/objects/Contact/fields/Extension_Number__c.field-meta.xml
<CustomField>
    <fullName>Extension_Number__c</fullName>
    <description>&quot;+++ INTEGRATION: MASTER DATA +++ 
Do not change this field without reviewing impact with master data integration&quot; 
#RQ-003321: Use this field to store extension number for Office Phone
#RQ-004927.</description>
    <inlineHelpText>Please use this field to store extension number for customer Phone</inlineHelpText>
    <label>Extension Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>