force-app/main/default/objects/Contact/fields/External_ID__c.field-meta.xml
<CustomField>
    <fullName>External_ID__c</fullName>
    <description>&quot;+++ INTEGRATION: MASTER DATA +++ 
Do not change this field without reviewing impact with master data integration&quot; 
#RQ-004162 
#RQ-004927</description>
    <externalId>true</externalId>
    <inlineHelpText>3rd Party system ID -Populated from CMD via integration</inlineHelpText>
    <label>External ID</label>
    <length>11</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>