force-app/main/default/objects/Contact/fields/First_Name_English__c.field-meta.xml
<CustomField>
    <fullName>First_Name_English__c</fullName>
    <label>First Name - English</label>
    <length>40</length>
    <type>Text</type>
</CustomField>