force-app/main/default/objects/Contact/fields/Id_Case_Insensitive__c.field-meta.xml
<CustomField>
    <fullName>Id_Case_Insensitive__c</fullName>
    <description>#RQ-002116 - Added to allow 18 character SFDC Id to be used in Reports</description>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Id (Case Insensitive)</label>
    <type>Text</type>
</CustomField>