force-app/main/default/objects/Contact/fields/Included_in_Data_Signals__c.field-meta.xml
<CustomField>
    <fullName>Included_in_Data_Signals__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field to indicate that the contact record is included in a Marketing Cloud Data Signals journey (e.g. Abandoned cart) and should be included in the synchronisation process irrespective of the contact’s consent status.</description>
    <inlineHelpText>Is Data Signal Related to Contact</inlineHelpText>
    <label>Included in Data Signals</label>
    <type>Checkbox</type>
</CustomField>