force-app/main/default/objects/Contact/fields/Influence_Level__c.field-meta.xml
<CustomField>
    <fullName>Influence_Level__c</fullName>
    <label>z_Influence Level</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Budget Holder</fullName>
            </value>
            <value>
                <fullName>Decision Maker</fullName>
            </value>
            <value>
                <fullName>Gate Keeper</fullName>
            </value>
            <value>
                <fullName>Influencer</fullName>
            </value>
            <value>
                <fullName>Opinion Leader</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>