force-app/main/default/objects/Contact/fields/IsDuplicate__c.field-meta.xml
<CustomField>
    <fullName>IsDuplicate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To Make the Contact Unique, with given Email Id, across all Contacts &amp; Leads.

#RQ-000606 : Field is made not visible by editing Field Level Security and removing from Page Layout.</description>
    <label>Mark as Duplicate</label>
    <type>Checkbox</type>
</CustomField>