force-app/main/default/objects/Contact/fields/Job_Role__c.field-meta.xml
<CustomField>
    <fullName>Job_Role__c</fullName>
    <label>Job Role</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Accounts Payable</fullName>
            </value>
            <value>
                <fullName>CEO</fullName>
            </value>
            <value>
                <fullName>CFO</fullName>
            </value>
            <value>
                <fullName>CIO</fullName>
            </value>
            <value>
                <fullName>Commercial Manager/Director</fullName>
            </value>
            <value>
                <fullName>Compliance / Customs</fullName>
            </value>
            <value>
                <fullName>COO</fullName>
            </value>
            <value>
                <fullName>CPO/Chief Procurement Officer</fullName>
            </value>
            <value>
                <fullName>CTO</fullName>
            </value>
            <value>
                <fullName>Director/Head of Procurement</fullName>
            </value>
            <value>
                <fullName>Export Manager</fullName>
            </value>
            <value>
                <fullName>Head of Digital Transformation</fullName>
            </value>
            <value>
                <fullName>Head of Supply Chain</fullName>
            </value>
            <value>
                <fullName>Import Manager</fullName>
            </value>
            <value>
                <fullName>Logistics Coordinator</fullName>
            </value>
            <value>
                <fullName>Logistics Manager/Director</fullName>
            </value>
            <value>
                <fullName>Marketing Manager/Director</fullName>
            </value>
            <value>
                <fullName>Operations Director</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Press</fullName>
            </value>
            <value>
                <fullName>Procurement Manager</fullName>
            </value>
            <value>
                <fullName>Products Manager</fullName>
            </value>
            <value>
                <fullName>Purchase Manager</fullName>
            </value>
            <value>
                <fullName>Sales Manager/Director</fullName>
            </value>
            <value>
                <fullName>Sales Representative</fullName>
            </value>
            <value>
                <fullName>Sourcing Manager</fullName>
            </value>
            <value>
                <fullName>Student</fullName>
            </value>
            <value>
                <fullName>Supply Chain Manager</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>