force-app/main/default/objects/Contact/fields/Job_Role_Other__c.field-meta.xml
<CustomField>
    <fullName>Job_Role_Other__c</fullName>
    <inlineHelpText>This is required if Job Role is selected as &quot;Other&quot;</inlineHelpText>
    <label>Job Role (Other)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>