force-app/main/default/objects/Contact/fields/Last_Checked__c.field-meta.xml
<CustomField>
    <fullName>Last_Checked__c</fullName>
    <description>#RQ-002172</description>
    <inlineHelpText>The date the Contact details (Office Phone, Mobile, Other Phone, Email, etc.) were last checked with the customer.</inlineHelpText>
    <label>Last Checked</label>
    <type>Date</type>
</CustomField>