force-app/main/default/objects/Contact/fields/Last_Checked_By__c.field-meta.xml
<CustomField>
    <fullName>Last_Checked_By__c</fullName>
    <description>#RQ-002769: Workflow populates this field with the name of the User who updated &quot;Last Checked&quot;.</description>
    <inlineHelpText>The name of the person who last updated &quot;Last Checked&quot;.</inlineHelpText>
    <label>Last Checked By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>