force-app/main/default/objects/Contact/fields/Last_Checked_By_Country__c.field-meta.xml
<CustomField>
    <fullName>Last_Checked_By_Country__c</fullName>
    <description>#RQ-002769</description>
    <label>Last Checked By Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>