force-app/main/default/objects/Contact/fields/Last_Checked_By_Role__c.field-meta.xml
<CustomField>
    <fullName>Last_Checked_By_Role__c</fullName>
    <description>#RQ-002769</description>
    <inlineHelpText>The Role name of the User who last checked the contact details of this record.</inlineHelpText>
    <label>Last Checked By Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>