force-app/main/default/objects/Contact/fields/Last_Name_English__c.field-meta.xml
<CustomField>
    <fullName>Last_Name_English__c</fullName>
    <description>RQ-004398</description>
    <label>Last Name - English</label>
    <length>80</length>
    <type>Text</type>
</CustomField>