force-app/main/default/objects/Contact/fields/Last_Used_ANI__c.field-meta.xml
<CustomField>
    <fullName>Last_Used_ANI__c</fullName>
    <inlineHelpText>TBC</inlineHelpText>
    <label>Last Used ANI</label>
    <type>Phone</type>
</CustomField>