force-app/main/default/objects/Contact/fields/Legacy_ID__c.field-meta.xml
<CustomField>
    <fullName>Legacy_ID__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>Used to store primary keys that uniquely identify individual records from other systems, commonly used when migrating data from one system to another.</inlineHelpText>
    <label>Legacy ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>