force-app/main/default/objects/Contact/fields/Legacy_System__c.field-meta.xml
<CustomField>
    <fullName>Legacy_System__c</fullName>
    <description>#Safmarine_United
To store the name of the system from where this record was migrated.</description>
    <label>Legacy System</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Safmarine</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>