force-app/main/default/objects/Contact/fields/Liner_Brand__c.field-meta.xml
<CustomField>
    <fullName>Liner_Brand__c</fullName>
    <description>#Safmarine_United 
#PR-0047: Added MCC Brand Value to this pick list.
#PR-0055-Added Seago value to the picklist .</description>
    <inlineHelpText>Captures the Brand of the Contact.</inlineHelpText>
    <label>Brand</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Alianca</fullName>
            </value>
            <value>
                <fullName>Hamburg Sud</fullName>
            </value>
            <value>
                <fullName>Maersk Line</fullName>
            </value>
            <value>
                <fullName>MCC</fullName>
            </value>
            <value>
                <fullName>Seago</fullName>
            </value>
            <value>
                <fullName>Sealand</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>