force-app/main/default/objects/Contact/fields/Liner_Brand_Logo__c.field-meta.xml
<CustomField>
    <fullName>Liner_Brand_Logo__c</fullName>
    <description>#PR-00031_3 : Modified this formula for showing the Sealand image on Target records.
#PR-0047:Added MCC Logo
#PR-0055-Added Seago Logo
#RQ-002890-Replaced the reference to liner brand logos with corresponding Static resources
#SPI-100: Replaced references with custom metadata</description>
    <formula>IMAGE( &quot;/resource/LogosForLinerBrandFlags/LogosForLinerBrandFlags/&quot; &amp;
IF(TEXT(Liner_Brand__c) == $CustomMetadata.Brand__mdt.MaerskLine.MasterLabel, $CustomMetadata.Brand__mdt.MaerskLine.Logo__c,  
IF(TEXT(Liner_Brand__c) == $CustomMetadata.Brand__mdt.Sealand.MasterLabel, $CustomMetadata.Brand__mdt.Sealand.Logo__c, 
IF(TEXT(Liner_Brand__c) == $CustomMetadata.Brand__mdt.MCC.MasterLabel, $CustomMetadata.Brand__mdt.MCC.Logo__c, 
IF(TEXT(Liner_Brand__c) == $CustomMetadata.Brand__mdt.Seago.MasterLabel, $CustomMetadata.Brand__mdt.Seago.Logo__c, 
IF(TEXT(Liner_Brand__c) == $CustomMetadata.Brand__mdt.HamburgSud.MasterLabel, $CustomMetadata.Brand__mdt.HamburgSud.Logo__c,
$CustomMetadata.Brand__mdt.Default.Logo__c))))), 
&quot;Liner Logo&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Brand Logo</label>
    <type>Text</type>
</CustomField>