force-app/main/default/objects/Contact/fields/Liner_Brands__c.field-meta.xml
<CustomField>
    <fullName>Liner_Brands__c</fullName>
    <description>#RQ-002893-Captures the Liner Brands of the Contact.</description>
    <inlineHelpText>Captures the Brands of the Contact</inlineHelpText>
    <label>Brands</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Alianca</fullName>
            </value>
            <value>
                <fullName>Hamburg Sud</fullName>
            </value>
            <value>
                <fullName>Maersk Line</fullName>
            </value>
            <value>
                <fullName>MCC</fullName>
            </value>
            <value>
                <fullName>Seago</fullName>
            </value>
            <value>
                <fullName>Sealand</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>