force-app/main/default/objects/Contact/fields/Liner_Brands_Text__c.field-meta.xml
<CustomField>
    <fullName>Liner_Brands_Text__c</fullName>
    <description>#RQ-002893: This text field stores value from Liner Brands mulit-select picklist since it cannot be directly used in sharing rules.</description>
    <label>Brands Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>