force-app/main/default/objects/Contact/fields/Marketing_ID__c.field-meta.xml
<CustomField>
    <fullName>Marketing_ID__c</fullName>
    <description>RQ-008869</description>
    <label>Marketing ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>