force-app/main/default/objects/Contact/fields/No_Email_Entered__c.field-meta.xml
<CustomField>
    <fullName>No_Email_Entered__c</fullName>
    <description>Visible only to SCL reps</description>
    <formula>IF( ISBLANK(Email) , 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>z_No Email Entered</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>