force-app/main/default/objects/Contact/fields/Preferred_Language__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Language__c</fullName>
    <description>&quot;+++ INTEGRATION: MASTER DATA +++ 
Do not change this field without reviewing impact with master data integration&quot; 
#RQ-004927</description>
    <inlineHelpText>The language in which Customer would like to receive communication.</inlineHelpText>
    <label>Preferred Language</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Abkhaz</fullName>
            </value>
            <value>
                <fullName>Afar</fullName>
            </value>
            <value>
                <fullName>Afrikaans</fullName>
            </value>
            <value>
                <fullName>Akan</fullName>
            </value>
            <value>
                <fullName>Albanian</fullName>
            </value>
            <value>
                <fullName>Amharic</fullName>
            </value>
            <value>
                <fullName>Arabic</fullName>
            </value>
            <value>
                <fullName>Aragonese</fullName>
            </value>
            <value>
                <fullName>Armenian</fullName>
            </value>
            <value>
                <fullName>Assamese</fullName>
            </value>
            <value>
                <fullName>Avaric</fullName>
            </value>
            <value>
                <fullName>Avestan</fullName>
            </value>
            <value>
                <fullName>Aymara</fullName>
            </value>
            <value>
                <fullName>Azerbaijani</fullName>
            </value>
            <value>
                <fullName>Bambara</fullName>
            </value>
            <value>
                <fullName>Bashkir</fullName>
            </value>
            <value>
                <fullName>Basque</fullName>
            </value>
            <value>
                <fullName>Belorussian</fullName>
            </value>
            <value>
                <fullName>Bengali</fullName>
            </value>
            <value>
                <fullName>Bihari</fullName>
            </value>
            <value>
                <fullName>Bislama</fullName>
            </value>
            <value>
                <fullName>Bosnian</fullName>
            </value>
            <value>
                <fullName>Breton</fullName>
            </value>
            <value>
                <fullName>Bulgarian</fullName>
            </value>
            <value>
                <fullName>Burmese</fullName>
            </value>
            <value>
                <fullName>Catalan</fullName>
            </value>
            <value>
                <fullName>Chamorro</fullName>
            </value>
            <value>
                <fullName>Chechen</fullName>
            </value>
            <value>
                <fullName>Chichewa, Chewa, Nyanja</fullName>
            </value>
            <value>
                <fullName>Chinese</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>