force-app/main/default/objects/Contact/fields/SCM_on_behalf_of__c.field-meta.xml
<CustomField>
    <fullName>SCM_on_behalf_of__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SCM on behalf of</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>