force-app/main/default/objects/Contact/fields/SCV_Code__c.field-meta.xml
<CustomField>
    <fullName>SCV_Code__c</fullName>
    <description>+++ INTEGRATION: MASTER DATA +++ Do not change this field without reviewing impact with master data integration. SFMC-7706</description>
    <externalId>true</externalId>
    <label>SCV Code</label>
    <length>11</length>
    <type>Text</type>
</CustomField>