force-app/main/default/objects/Contact/fields/Telephony_Agent_ID__c.field-meta.xml
<CustomField>
    <fullName>Telephony_Agent_ID__c</fullName>
    <description>SC-961
Cisco have confirmed that they will never be able to match agents based on Contact email address. Using this field to store Agent Ids in Salesforce.</description>
    <inlineHelpText>Use this field to indicate the Agent Id for the routing strategy.</inlineHelpText>
    <label>Telephony Agent ID</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>