force-app/main/default/objects/Contact/fields/To_Do__c.field-meta.xml
<CustomField>
    <fullName>To_Do__c</fullName>
    <description>#RQ-002172</description>
    <formula>IF( ISBLANK( Last_Checked__c ) || Contact_Details_Ageing__c &gt; 180, IMAGE( &quot;/resource/ONB_Onboarding_Images/icon_warning.png&quot;, &quot;&quot; ) &amp; &quot; Did you review the phone numbers? Click &quot; &amp;  HYPERLINK( &quot;/servlet/servlet.FileDownload?file=01557000003vYLd&quot;, &quot;here&quot;) &amp; &quot; for the SOP and &quot; &amp; HYPERLINK( &quot;https://countrycode.org/&quot;, &quot;here&quot;) &amp; &quot; for a list of Country codes.&quot;, &quot;Nothing, you&apos;re all done!&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Displays warning and instructional messages to the Users when actions need to be taken on this Contact.</inlineHelpText>
    <label>To Do</label>
    <type>Text</type>
</CustomField>