force-app/main/default/objects/Contact/fields/Type_of_Contact_del__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Contact_del__c</fullName>
    <description>#Case_Mgt_v1: Field used on the publisher layout to select the record type. This field in turn used update the record type of the Contact through WF&apos;s</description>
    <label>Type of Contact</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Non-shipping Party Contact</fullName>
            </value>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Internal Contact</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>