force-app/main/default/objects/Contact/fields/Unique_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Unique_Email_Address__c</fullName>
    <description>#RQ-000606 &amp; #PR-00031_2 :
On creating of contact, there should exist only unique email address for a single Liner Brand.
This field consist of concatenation of Liner Brand and Email address to ensure there are no duplicate emails within a Liner Brand. Populated using Workflow.</description>
    <label>*Email</label>
    <length>120</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>