force-app/main/default/objects/Contact/fields/Unique_User_ID__c.field-meta.xml
<CustomField>
    <fullName>Unique_User_ID__c</fullName>
    <description>#Case_Mgt_v1:
Unique user ID of 6 characters, available only for Internal Contacts</description>
    <inlineHelpText>Unique 6-digit ID, in the format of 3 alphabet and 3 numeric digits</inlineHelpText>
    <label>Unique User ID</label>
    <length>6</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>